[package]
name = "jwt-auth-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.11"
jsonwebtoken = "9.3"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
regex = "1.11.1"
